# aoc-2023

./: README.md  pyproject.toml
1/: day1.py  main.py  test_day1.py  test_main.py
2/: day2.py  test_day2.py
3/: day3.py  test_day3.py
4/: day4.py  test_day4.py
5/: day5.py  test_day5.py
6/: day6.py  test_day6.py
7/: day7.py  test_day7.py
