[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = ""
authors = ["Tzvi Friedman <tadwork@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
